src/test/ui/feature-gate-stmt_expr_attributes.stderr
error[E0658]: attributes on non-item statements and expressions are experimental. (see issue #15701)
  --> $DIR/feature-gate-stmt_expr_attributes.rs:11:16
   |
11 | const X: i32 = #[allow(dead_code)] 8;
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(stmt_expr_attributes)] to the crate attributes to enable

error: aborting due to previous error

